RESOLVED FIXED70891
REGRESSION(r97032): [Mac] Slider thumb is not drawn
https://bugs.webkit.org/show_bug.cgi?id=70891
Summary REGRESSION(r97032): [Mac] Slider thumb is not drawn
Kent Tamura
Reported 2011-10-26 02:18:25 PDT
With SnowLeopard + Safari 5.1 + WebKit r97032 or later, slider thumb of <input type=range> is not drawn.
Attachments
Patch (2.55 KB, patch)
2011-10-26 14:39 PDT, mitz
andersca: review+
mitz
Comment 1 2011-10-26 14:22:31 PDT
mitz
Comment 2 2011-10-26 14:39:02 PDT
mitz
Comment 3 2011-10-26 14:41:55 PDT
mitz
Comment 4 2011-10-26 17:29:56 PDT
Reverted the Chromium-specific part of the change in r98529.
Note You need to log in before you can comment on or make changes to this bug.