<rdar://problem/10350775> REGRESSION (r97032): Slider thumb is not drawn https://bugs.webkit.org/show_bug.cgi?id=70891

Reviewed by Anders Carlsson.

* platform/mac/ThemeMac.mm:
(WebCore::ThemeMac::ensuredView): Set the WebCoreFlippedView’s size, because NSSliderCell
always shrinks the slider thumb to fit in the control view’s bounds.
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::paintSliderThumb): Removed workaround code no longer needed after
r97032.



Canonical link: https://commits.webkit.org/87168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98520 268f45cc-cd09-0410-ab3c-d52691b4dbfc