Source/WebCore/platform/mac/ThemeMac.mm
@@ -557,7 +557,8 @@ NSView *ThemeMac::ensuredView(ScrollView* scrollView)
     
     // Use a fake flipped view.
     static NSView *flippedView = [[WebCoreFlippedView alloc] init];
-    
+    [flippedView setFrameSize:scrollView->contentsSize()];
+
     return flippedView;
 }
     
